--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-git+https://github.com/django/django.git@1.7b4#egg=Django
-mock
-requests
-stripe
-psycopg2
-djangorestframework
-django-embed-video
-mongoengine
-pymongo
+Django==1.7
+Pillow==2.6.1
+django-embed-video==0.11
+djangorestframework==2.4.3
+djangular==0.2.7
+mock==1.0.1
+mongoengine==0.8.7
+psycopg2==2.5.4
+pymongo==2.7.2
+requests==2.4.3
+stripe==1.19.0
